@@ -8,9 +8,11 @@ import org.springframework.boot.test.autoconfigure.web.servlet.AutoConfigureMock
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.test.web.servlet.MockMvc;
 
-import static org.junit.jupiter.api.Assertions.*;
-import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
-import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
+import static org.hamcrest.Matchers.containsString;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.post;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.content;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 
 @SpringBootTest
 @AutoConfigureMockMvc
@@ -27,10 +29,9 @@ class CalculatorIntegrationTest {
         mockMvc.perform(post("/calculate")
                         .param("expression", "2 + 2"))
                 .andExpect(status().isOk())
-                .andExpect(view().name("calculator"))
-                .andExpect(model().attribute("result", 4.0));
+                .andExpect(content().string(containsString("4.0")));
 
-        CalculationHistory savedCalculation = repository.findAll().get(0);
+        CalculationHistory savedCalculation = repository.findAll().getFirst();
         assertEquals("2 + 2", savedCalculation.getExpression());
         assertEquals(4.0, savedCalculation.getResult());
     }
